alignment fixed

--- a/src/Map.css
+++ b/src/Map.css
@@ -95,6 +95,7 @@ select:focus{
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  margin: 50%;
 }
 
 .speedButtons {
